--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/banten-logo.svg" />
+    <link rel="shortcut icon" href="/banten-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SIMANTU - System Management</title>
   </head>
